--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/laptop.css" />
-    <link rel="stylesheet" href="./css/font.css" />
-    <link rel="stylesheet" href="./css/tablet.css" />
-    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./font.css" />
+    <link rel="stylesheet" href="./tablet.css" />
+    <link rel="stylesheet" href="./mobile.css" />
     <link rel="stylesheet" href="./laptop.css" />
 
     <link
@@ -467,7 +467,7 @@
             />
             <div class="CV1">
               <div class="CV2">
-                <a href="./html/cvcanhan.html"><strong>CV CÁ NHÂN</strong></a>
+                <a href="./cvcanhan.html"><strong>CV CÁ NHÂN</strong></a>
               </div>
               <div class="CV3">
                 <span class="nam">2021</span> <i class="icon-user-1"></i>Funix
@@ -503,7 +503,7 @@
               width="100%"
             />
             <div class="CV2">
-              <a href="./html/webthucung.html"
+              <a href="./webthucung.html"
                 ><strong>TRANG WEB QUẢN LÝ THÚ CƯNG</strong></a
               >
             </div>
@@ -541,7 +541,7 @@
               width="100%"
             />
             <div class="CV2">
-              <a href="./html/xemtintuc.html"
+              <a href="./xemtintuc.html"
                 ><strong>TRANG WEB XEM TIN TỨC</strong></a
               >
             </div>
@@ -592,7 +592,7 @@
       </div>
     </section>
   </body>
-  <script src="./css/javascript.js"></script>
+  <script src="./javascript.js"></script>
   <script
     src="https://kit.fontawesome.com/73231b8adb.js"
     crossorigin="anonymous"
